--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,12 @@
 server {
-    listen 80;
-    server_name mln131.xhuyz.me;
-    root /usr/share/nginx/html;
-    index index.html;
+  listen 80;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location ~* \.(?:manifest|appcache|html?|xml|json)$ {
-        expires -1;
-    }
-    location ~* \.(?:css|js|woff2?|ttf|otf|eot|svg|ico|jpg|jpeg|gif|png|webp|avif)$ {
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
-    }
-
-    # Gzip
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_min_length 256;
+  location / {
+    try_files $uri /index.html;
+  }
 }
+
+
